@@ -77,7 +77,7 @@ test_script:
   - python setup.py sdist --formats=zip,gztar,bztar
   - python setup.py bdist_wheel
   # Try installing from the source package (install dependencies via conda first)
-  - conda install --yes --quiet -c spyking-circus "tqdm!=4.15" mpi4py numpy cython scipy matplotlib h5py colorama psutil "qt>=4" "pyqt >=4" python-blosc statsmodels scikit-learn
+  - conda install --yes --quiet -c spyking-circus "tqdm!=4.15" "mpi4py>=3" "mpich>=3" numpy cython scipy matplotlib h5py colorama psutil "qt>=4" "pyqt >=4" python-blosc statsmodels scikit-learn
   - FOR /R dist %%F in (*.tar.gz) do pip install %%F
   - spyking-circus -h
   - pip uninstall -y -q spyking-circus
